--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link1" href="https://www.facebook.com/anthony.kyo.nyx/">Facebook</a>
+    <a class="footer-link1" href="">Facebook</a>
     <a class="footer-link2" href="https://twitter.com/LpxAnthony">Twitter</a>
     <a class="footer-link3" href="">Pagina Web</a>
     <p class="copy">© 2020 Antonio Lopez.</p>
